--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/drei": "^9.50.3",
     "@react-three/fiber": "^8.9.2",
     "@react-three/postprocessing": "^2.7.1",
+    "gh-pages": "^5.0.0",
     "leva": "^0.9.34",
     "r3f-perf": "^6.6.3",
     "react": "18.2",
