--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "transition-1",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "homepage": "https://tomasokal.github.io/cube-2",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "3.0",
+    "gh-pages": "^5.0.0",
     "vite": "^4.0.4"
   },
   "dependencies": {
@@ -16,7 +19,6 @@
     "@react-three/drei": "^9.50.3",
     "@react-three/fiber": "^8.9.2",
     "@react-three/postprocessing": "^2.7.1",
-    "gh-pages": "^5.0.0",
     "leva": "^0.9.34",
     "r3f-perf": "^6.6.3",
     "react": "18.2",
