--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "r3f-perf": "^7.1.2",
     "react": "18.2",
     "react-dom": "18.2",
+    "react-feather": "^2.0.10",
     "three": "^0.153.0",
     "zustand": "^4.3.8"
   }
